2008-06-18  Matthias Clasen  <mclasen@redhat.com>

	* gtk/Makefile.am: Add some more aliases for standard
	icon names to the builtin icon theme: drive-harddisk,
	folder, folder-remote, text-x-generic.

2008-06-18  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkcalendar.c: set the maximum of the "year" property to
	G_MAXINT >> 8 instead of G_MAXINT to fix overflows in internal
	calculations which in turn caused writing beyond the boundaries of
	the calendar->day_month[] and day[] arrays which in turn caused a
	SEGV. This limits the lifetime of GTK+ to the year 8,388,608 ;)

2008-06-18  Michael Natterer  <mitch@imendio.com>

	* tests/Makefile.am
	* tests/autotestfilechooser.c
	* tests/buildertest.c
	* tests/defaultvaluetest.c
	* tests/floatingtest.c
	* tests/objecttests.c
	* tests/pixbuf-init.c
	* tests/textbuffertest.c: remove unit tests here...

	* gtk/tests/Makefile.am
	* gtk/tests/builder.c
	* gtk/tests/defaultvalue.c
	* gtk/tests/filechooser.c
	* gtk/tests/floating.c
	* gtk/tests/object.c
	* gtk/tests/pixbuf-init.c
	* gtk/tests/textbuffer.c: ...and add them here.

2008-06-18  Michael Natterer  <mitch@imendio.com>

	* gdk/gdk.h: deprecate GdkDestroyNotify.

	* gdk/gdkevents.c
	* gdk/gdktypes.h
	* gdk/x11/gdkevents-x11.c
	* gtk/gtkmain.c: s/GdkDestroyNotify/GDestroyNotify/g.

2008-06-18  Michael Natterer  <mitch@imendio.com>

	* gtk/gtktypeutils.h: deprecate GtkDestroyNotify.

	* gtk/gtkactiongroup.[ch]
	* gtk/gtkcombobox.[ch]
	* gtk/gtkcontainer.[ch]
	* gtk/gtkliststore.[ch]
	* gtk/gtkmain.[ch]
	* gtk/gtkmenu.c
	* gtk/gtkstock.[ch]
	* gtk/gtktreedatalist.[ch]
	* gtk/gtktreemodelfilter.[ch]
	* gtk/gtktreemodelsort.[ch]
	* gtk/gtktreeprivate.h
	* gtk/gtktreeselection.[ch]
	* gtk/gtktreesortable.[ch]
	* gtk/gtktreestore.[ch]
	* gtk/gtktreeview.[ch]
	* gtk/gtktreeviewcolumn.[ch]: s/GtkDestroyNotify/GDestroyNotify/g.

2008-06-18  Michael Natterer  <mitch@imendio.com>

	* tests/testgtk.c: some more undeprecation.

2008-06-18  Michael Natterer  <mitch@imendio.com>
